2008-05-25  Cody Russell  <bratsche@gnome.org>

	Bug 526635 - _gdk_window_get_toplevel handles FOREIGN windows

	* gdk/x11/gdkwindow-x11.c (_gdk_window_get_toplevel): Check
	!WINDOW_IS_TOPLEVEL instead of checking for GDK_WINDOW_CHILD,
	so that we also take into account for foreign windows.
	Report and patch by Nathaniel Smith.

2008-05-25  Cody Russell  <bratsche@gnome.org>

	Bug 525461 - Don't invalidate under an input-only child

	* gdk/x11/gdkgeometry-x11.c (_gdk_window_move_resize_child):
	Check that the window is not input-only before invalidating.
	Report and patch by Owen Taylor.

2008-05-25  Cody Russell  <bratsche@gnome.org>

	Bug 524110 - Gdk should not assume reparenting WMs when retrieving
	window frame extents

	* gdk/x11/gdkwindow-x11.c (gdk_window_get_frame_extents):
	Use _NET_FRAME_EXTENTS, if available.  Patch by Danny Baumann.

2008-05-25  Cody Russell  <bratsche@gnome.org>

	Bug 522269 - Evince windows sometimes incorrectly unmaximized,
	caused by missing flag initialization

	* gdk/x11/gdkwindow-x11.c (set_initial_hints): Initialize
	top-level private flags correctly.  Patch by Danny Baumann.

2008-05-25  Cody Russell  <bratsche@gnome.org>

	Bug 534463 - non-editable GtkTextView should not call
	gtk_im_context_focus_in in focus event

	* gtk/gtktextview.c: Add checks to see if the textview is
	editable.  Patch by Wang Diancheng.

2008-05-25  Matthias Clasen  <mclasen@redhat.com>

	Bug 501730 – use GSlice for small allocs

	* gtk/gtkmenuitem.c:
	* gtk/gtkmenu.c: Use the slice allocator for small allocations.
	Patch by Christian Persch.
	
2008-05-25  Matthias Clasen  <mclasen@redhat.com>

	Bug 523930 – sort -> search in gtktreeview.c

	* gtk/gtktreeview.c (gtk_tree_view_set_search_column): Fix a doc
	glitch, pointed out by Björn Lindqvist.

2008-05-25  Matthias Clasen  <mclasen@redhat.com>

	Bug 479384 – gtk_selection_data_targets_include_uri docs buglet

	* gtk/gtkselection.c (gtk_selection_data_targets_include_uri): Fix